Remove faas mysql support

--- a/bin/config/zrlog.properties
+++ b/bin/config/zrlog.properties
@@ -1,1 +1,1 @@
-vmArgs=-XX:StackSize=262144 XX:MaxHeapSize=134217728 -XX:+ExitOnOutOfMemoryError
+vmArgs=-XX:StackSize=262144 -XX:MaxHeapSize=134217728 -XX:+ExitOnOutOfMemoryError
