--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
         <sws.version>4.0.107</sws.version>
         <!--version 0-->
         <zrlog-base.version>3.2.111</zrlog-base.version>
-        <zrlog-blog-web.version>3.2.111</zrlog-blog-web.version>
-        <zrlog-admin-web.version>3.2.114</zrlog-admin-web.version>
+        <zrlog-blog-web.version>3.2.112-SNAPSHOT</zrlog-blog-web.version>
+        <zrlog-admin-web.version>3.2.115</zrlog-admin-web.version>
         <mysql-scope>compile</mysql-scope>
     </properties>
 
