--- a/.github/workflows/java-build-preview-package-zip.yml
+++ b/.github/workflows/java-build-preview-package-zip.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Build with Maven
         run: |
           mkdir -p /tmp/download
-          bash -e shell/java/build-final-java.sh preview 预览版 /tmp/download
+          bash -e shell/java/build-final-java.sh preview /tmp/download
           bash shell/upload-bin.sh ${{ secrets.SECRET_ID }} ${{ secrets.SECRET_KEY }} ${{ secrets.BUCKET }} /tmp/download preview ${{ secrets.HOST }}
