--- a/.github/workflows/java-build-release-package-zip.yml
+++ b/.github/workflows/java-build-release-package-zip.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Build with Maven
         run: |
           mkdir -p /tmp/download
-          bash -e shell/java/build-final-java.sh release 正式版本 /tmp/download
+          bash -e shell/java/build-final-java.sh release /tmp/download
           bash shell/upload-bin.sh ${{ secrets.SECRET_ID }} ${{ secrets.SECRET_KEY }} ${{ secrets.BUCKET }} /tmp/download release ${{ secrets.HOST }}
