--- a/.gitignore
+++ b/.gitignore
@@ -17,23 +17,23 @@ hs_err*.log
 /static/
 conf/classes
 conf/plugins/*
-web/log
-web/logs
+zrlog-web/log
+zrlog-web/logs
 rebel.xml
 lib/*.jar
 zrlog-starter.jar
 *.hprof
 log/
-web/sim.pid
+zrlog-web/sim.pid
 sim.pid
 .DS_Store
 .vscode
 pom.xml.versionsBackup
-web/src/main/zrlog
-web/src/main/lib
+zrlog-web/src/main/zrlog
+zrlog-web/src/main/lib
 conf/update-temp/zrlog.zip
 zrlog.zip
-/web/src/main/resources/build.properties
+/zrlog-web/src/main/resources/build.properties
 node_modules
 *.zip
 temp
@@ -43,13 +43,13 @@ zrlog.bgv
 /zrlog
 /conf/update-temp/
 1
-package-web/src/main/webapp/cache
-package-web/src/main/webapp/WEB-INF/plugins/*
-!package-web/src/main/webapp/WEB-INF/plugins/.gitkeep
+package/src/main/webapp/cache
+package/src/main/webapp/WEB-INF/plugins/*
+!package/src/main/webapp/WEB-INF/plugins/.gitkeep
 tomcat.*
-package-web/src/main/webapp/static/attached/*
+package/src/main/webapp/static/attached/*
 doc/build_system_info.md
 bootstrap
 conf/*.sql
 conf/sqlite-db.properties
-/web/src/main/resources/build_system_info.md
+/zrlog-web/src/main/resources/build_system_info.md
