--- a/package/pom.xml
+++ b/package/pom.xml
@@ -3,12 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.zrlog</groupId>
-        <artifactId>zrlog</artifactId>
+        <groupId>com.hibegin</groupId>
+        <artifactId>zrlog-web-parent</artifactId>
         <version>3.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>package-web</artifactId>
+    <artifactId>package</artifactId>
     <packaging>${packageType}</packaging>
 
     <properties>
@@ -25,8 +25,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.zrlog</groupId>
-            <artifactId>web</artifactId>
+            <groupId>com.hibegin</groupId>
+            <artifactId>zrlog-web</artifactId>
         </dependency>
         <dependency>
             <groupId>com.hibegin</groupId>
