--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.hibegin</groupId>
         <artifactId>zrlog-base</artifactId>
-        <version>3.2.114</version>
+        <version>3.2.115</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zrlog-web-parent</artifactId>
@@ -30,8 +30,8 @@
         <lambda-scope>compile</lambda-scope>
         <servlet-api.version>6.1.0</servlet-api.version>
         <zrlog-install-web.version>3.2.28</zrlog-install-web.version>
-        <zrlog-blog-web.version>3.2.112</zrlog-blog-web.version>
-        <zrlog-admin-web.version>3.2.117-SNAPSHOT</zrlog-admin-web.version>
+        <zrlog-blog-web.version>3.2.115</zrlog-blog-web.version>
+        <zrlog-admin-web.version>3.2.117</zrlog-admin-web.version>
         <mysql-scope>compile</mysql-scope>
     </properties>
 
