[shell-release]next version 3.3.1-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zrlog-web-parent</artifactId>
     <packaging>pom</packaging>
-    <version>3.3.0</version>
+    <version>3.3.1-SNAPSHOT</version>
     <modules>
         <module>zrlog-web</module>
         <module>package</module>
@@ -131,7 +131,7 @@
             <dependency>
                 <groupId>com.hibegin</groupId>
                 <artifactId>zrlog-web</artifactId>
-                <version>3.3.0</version>
+                <version>3.3.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.mysql</groupId>
