--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <servlet-api.version>6.1.0</servlet-api.version>
         <zrlog-install-web.version>3.2.32</zrlog-install-web.version>
         <zrlog-blog-web.version>3.3.8</zrlog-blog-web.version>
-        <zrlog-admin-web.version>3.3.8</zrlog-admin-web.version>
+        <zrlog-admin-web.version>3.3.9-SNAPSHOT</zrlog-admin-web.version>
         <mysql-scope>compile</mysql-scope>
     </properties>
 
